--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"></link>
-    <title>uOttahack</title>
+    <title>uOttaHack</title>
   </head>
   <body id="body">
     <div id="root"></div>
